fix a layout bug that I introduced earlier when I thought I was smarter than @grampajoe

--- a/meetups/static/less/global.less
+++ b/meetups/static/less/global.less
@@ -27,3 +27,7 @@ div.hero-unit img {
         }
     }
 }
+
+#messages {
+  margin-top: 3.4em;
+}
